# Mini-Studio-JapMyth

./: .gitignore  CMakeLists.txt  README.md  setup_windows.bat
include/: Barrier.h  Boss.h  BossBehavior.h  Fireball.h  Game.h  GameScene.h  IGameObject.h  IScene.h  MyMath.h  OrbitalProjectile.h  PauseScene.h  PlayerShip.h  SceneManager.h  TitleScene.h  hero.h
mainFile/src/: main.cpp
mainfile/: CMakeLists.txt
mylib/: CMakeLists.txt
mylib/include/: Animation.h  AnimationManager.h  Boss.h  BossBehavior.h  HealthComponent.h  Hero.h  IComponent.h  MovementComponent.h  State.h  StateComponent.h  TextureCache.h  Tree.h  b1Behavior.h  behaviorTree.h  e1Behavior.h  engine.h  ennemie.h  game.h  gameObject.h  heroState.h  menu.h  pause.h  resourceManager.h  sceneBase.h  sceneManager.h  state.h
mylib/src/: Animation.cpp  AnimationManager.cpp  Boss.cpp  Game.cpp  GameScene.cpp  Hero.cpp  HeroState.cpp  MyMath.cpp  PauseScene.cpp  SceneManager.cpp  TextureCache.cpp  behaviorTree.cpp  engine.cpp  ennemie.cpp  game.cpp  hero.cpp  heroState.cpp  menu.cpp  resourceManager.cpp  sceneBase.cpp  sceneManager.cpp
scripts/: clean.bat  install_sfml.bat  install_vcpkg.bat
src/: Barrier.cpp  Boss.cpp  Fireball.cpp  Game.cpp  GameCollision.cpp  GameScene.cpp  IGameObject.cpp  IScene.cpp  OrbitalProjectile.cpp  PlayerShip.cpp  SceneManager.cpp  TitleScene.cpp  Tree.cpp  hero.cpp  main.cpp  state.cpp
